--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project.PAW - 로그인</title>
-  <link rel="stylesheet" href="app.min.css">
+  <link rel="stylesheet" href="styles.css">
   <script type="module">
     import { auth, signInWithEmailAndPassword, signOut } from "./js/firebase.js";
 
