--- a/project_list.html
+++ b/project_list.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Project.PAW – 후원하기</title>
-  <link rel="stylesheet" href="app.min.css">
+  <link rel="stylesheet" href="styles.css">
   <style>
     body{margin:0;font-family:"Noto Sans KR",system-ui,Segoe UI,Roboto,sans-serif;background:#fff;color:#111827}
     .wrap{max-width:1200px;margin:0 auto;padding:24px 16px}
