--- a/create.html
+++ b/create.html
@@ -13,10 +13,8 @@
     .form-grid .full { grid-column: 1 / -1; }
     label { display:block; font-weight:600; margin-bottom:6px; }
     input, textarea { width:100%; padding:10px; border:1px solid #e5e7eb; border-radius:8px; }
-    input:disabled { background:#f3f4f6; color:#9ca3af; } /* 음영 */
     .btn { padding:10px 14px; border-radius:10px; border:1px solid #111; background:#111; color:#fff; cursor:pointer; }
     .btn.secondary { background:#fff; color:#111; border:1px solid #ddd; }
-    .hint { font-size:.85rem; color:#6b7280; }
   </style>
 </head>
 <body>
@@ -51,20 +49,6 @@
       <div>
         <label>구조자 부담액(원)</label>
         <input name="rescuerContribution" type="number" min="0" step="1000" placeholder="예: 180000" required/>
-      </div>
-
-      <!-- 🔥 Beta Service 비활성화 필드 -->
-      <div>
-        <label>동물병원 이름</label>
-        <input name="hospitalName" type="text" placeholder="Beta Service 후 활성화 예정" disabled/>
-      </div>
-      <div>
-        <label>계좌번호(참고)</label>
-        <input name="bankAccount" type="text" placeholder="Beta Service 후 활성화 예정" disabled/>
-      </div>
-      <div class="full">
-        <label>카카오톡 초대링크</label>
-        <input name="kakaoInviteLink" type="url" placeholder="Beta Service 후 활성화 예정" disabled/>
       </div>
 
       <!-- 🔥 등록자 카카오톡 ID -->
@@ -161,7 +145,8 @@
           goalAmount: Number(fd.get("goalAmount") || 0),
           rescuerContribution: Number(fd.get("rescuerContribution") || 0),
 
-          hospitalName: null, // Beta 단계 → null 처리
+          // 관리자 전용 필드 — 등록 시 null
+          hospitalName: null,
           bankAccount: null,
           kakaoInviteLink: null,
 
